--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
+certifi==2023.11.17
+charset-normalizer==3.3.2
+idna==3.6
+iniconfig==2.0.0
+packaging==23.2
+pluggy==1.3.0
+pytest==7.4.3
+requests==2.31.0
+urllib3==2.1.0
 bcrypt==4.0.1
 blinker==1.7.0
 click==8.1.7
@@ -13,6 +22,8 @@ MarkupSafe==2.1.3
 marshmallow==3.20.1
 marshmallow-sqlalchemy==0.29.0
 packaging==23.2
+psycopg==3.1.12
+psycopg-binary==3.1.12
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
 python-dotenv==1.0.0
